--- a/assets/css/4-page-layouts/_-page-layouts-index.sass
+++ b/assets/css/4-page-layouts/_-page-layouts-index.sass
@@ -1,11 +1,13 @@
+@import 'test'
 @import 'footer'
 @import 'header'
 @import 'index'
-@import 'post'
 @import 'about'
-@import 'test'
 @import 'themes'
 @import 'theme'
 @import 'recommendations'
 @import 'recommendation'
+@import 'posts'
+@import 'post'
+@import 'archive'
 @import 'articles'
