--- a/assets/css/4-page-layouts/_footer.sass
+++ b/assets/css/4-page-layouts/_footer.sass
@@ -77,7 +77,7 @@ footer
                   color: black
                   margin-bottom: 8px
                   a
-                     @extend .link
+                     @extend .link-accent
                      font-weight: $bold
                      color: fade-out($accent-color, 0.2)
                      &:hover
