--- a/assets/css/4-page-layouts/_test.sass
+++ b/assets/css/4-page-layouts/_test.sass
@@ -1,3 +1,9 @@
+.overlay-olive
+   background: fade-out(olive, 0.86)
+   +size(100%)
+.round
+   border-radius: 50%
+   
 .color-box
    display: inline-block
    +size(200px)
@@ -82,8 +88,7 @@ body.start-body
 //             size: 70px
 
 .page-content
-   // min-height: calc(100vh - 63px)
-   // min-height: 91vh
+   min-height: 60vh
    position: relative
    background: rgba(0,0,0,0)
 
@@ -101,7 +106,6 @@ body.start-body
    // background-color: #999
 
 .page-content > .wrapper
-
    background: $section-bg-0
 
 .blog-post
