--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,14 +13,14 @@
             <li><a href="{{node.url}}">{{node.title}}</a></li>
             {% endif %}
             {% endfor %} -->
-            <li><a  {% if page.url == '/' %}class="nav-item-active"{% endif %} href="/"> Start </a></li>
-            <li><a  {% if page.url == '/themes/' %}class="nav-item-active"{% endif %} href="/themes/">Teman</a></li>
-            <li><a  {% if page.url == '/recommendations/' %}class="nav-item-active"{% endif %} href="/recommendations/"> Rekomendationer </a></li>
+            <li><a id="navLink1" {% if page.url == '/' %}class="nav-item-active"{% endif %} href="/"> Start </a></li>
+            <li><a id="navLink2" {% if page.url == '/themes/' %}class="nav-item-active"{% endif %} href="/themes/">Teman</a></li>
+            <li><a id="navLink3" {% if page.url == '/recommendations/' %}class="nav-item-active"{% endif %} href="/recommendations/"> Rekomendationer </a></li>
             <!-- <li><a  >Demo</a></li> -->
-            <li><a  {% if page.url == '/articles/' %}class="nav-item-active"{% endif %} href="/articles/"> Artiklar </a></li>
-            <li><a  >Nyheter</a></li>
-            <li><a  {% if page.url == '/contact/' %}class="nav-item-active"{% endif %} href="/contact/"> Kontakt </a></li>
-            <li><a  {% if page.url == '/about/' %}class="nav-item-active"{% endif %} href="/about/"> Om Oss </a></li>
+            <li><a id="navLink4" {% if page.url == '/articles/' %}class="nav-item-active"{% endif %} href="/articles/"> Artiklar </a></li>
+            <li><a id="navLink5" {% if page.url == '/posts/' %}class="nav-item-active"{% endif %} href="/posts/"> Nyheter </a></li>
+            <li><a id="navLink6" {% if page.url == '/contact/' %}class="nav-item-active"{% endif %} href="/contact/"> Kontakt </a></li>
+            <li><a id="navLink7" {% if page.url == '/about/' %}class="nav-item-active"{% endif %} href="/about/"> Om Oss </a></li>
          </ul>
       </nav>
    </div>
