--- a/assets/css/4-page-layouts/_post.sass
+++ b/assets/css/4-page-layouts/_post.sass
@@ -1,3 +1,9 @@
+.post
+   // background: red
+   width: 60%
+   margin: auto
+   padding: 20px 10px
+
 .post-parent
    // background: honeydew
    padding: 20px auto
