added new colors and index section

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,8 @@
 
+<div class="header-back">
+</div>
 <header id="header">
+
    <div class="wrapper">
       <div class="logo">
          <h1 class="big-text">En ny generation digitala lärmodel</h1>
