--- a/assets/css/2-base/_colors.sass
+++ b/assets/css/2-base/_colors.sass
@@ -11,7 +11,7 @@ $dark-bg: #222
 $light-text: #eee
 $dark-text: #444
 
-$dark-blue: #00529C
+$dark-blue: #2C485B
 $orange: #F36E2E
 $dark-teal: #006B85
 $light-blue: #0CBFF2
@@ -34,7 +34,8 @@ $section-bg-1: $soft-gray
 $section-bg-2: $flamingo-pink
 $section-bg-3: $dark-teal
 $section-bg-4: $medium-teal
-$section-bg-5: $orange
+$section-bg-5: $dark-blue
+
 
 $media-box-bg: #f7f7f7
 
