has structure for categories like subject and year-group, added print-header/banner

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-
+<img id="print-banner" src="/assets/img/logos/etg.png" alt="Eductional technology group">
 <div class="header-back">
 </div>
 <header id="header">
