--- a/assets/css/4-page-layouts/_posts.sass
+++ b/assets/css/4-page-layouts/_posts.sass
@@ -4,7 +4,7 @@
 .posts
    .wrapper
       .post
-         width: 96%
+         // width: 96%
          margin-left: 0px
 .wrapper
    .post
@@ -13,7 +13,7 @@
       +media($tablet)
          padding-left: 19px
       margin-bottom: 10px
-      width: 60%
+      width: 90%
       text-align: left
       p
          font-size: 1.0em
@@ -30,6 +30,8 @@
       h1
          @extend .thick-heading
          margin-bottom: 10px
+      h2
+         margin-bottom: 6px
       h3
          margin-bottom: 6px
       hr
