--- a/assets/css/4-page-layouts/_theme.sass
+++ b/assets/css/4-page-layouts/_theme.sass
@@ -1,7 +1,7 @@
 iframe
    +size(900px 600px)
    box-shadow: 1px 1px 4px black
-   
+
 .disable-button
    pointer-events: none
    cursor: default
@@ -33,8 +33,8 @@ iframe
       padding: 20px 0 0px
       margin-bottom: 0px
       @media print
-         padding: 0px
-         margin: 0px 0px 20px
+         padding: 20px 0px 0px
+         margin: 40px 0px 0px
    hr
       @media print
          display: none
