--- a/assets/css/4-page-layouts/_header.sass
+++ b/assets/css/4-page-layouts/_header.sass
@@ -1,3 +1,12 @@
+#print-banner
+   // display: none
+   position: fixed
+   top: 10px
+   left: 30px
+   +size(300px 40px)
+   z-index: 10
+   @media print
+      display: block
 .nav-item-active
    border-color: $nav-accent
    background: darken($header-bg, 3%)
@@ -17,6 +26,8 @@
    opacity: 0.0
    background: rgba(0,0,0,0)
 .header-back
+   @media print
+      display: none
    position: fixed
    top: 0
    width: 100%
