--- a/assets/css/4-page-layouts/_about.sass
+++ b/assets/css/4-page-layouts/_about.sass
@@ -8,16 +8,16 @@
 
       color: $light-text
 
-      background: $section-bg-5
+      background: $section-bg-0
       &:nth-child(1)
-         background: $dark-teal
+         background: $medium-teal
 
          // margin-top: 62px
       &:nth-child(2)
-         background: $medium-teal
+         background: $soft-gray
+
       &:nth-child(3)
          background: $white
-
 
       .wrapper
          section
@@ -29,19 +29,11 @@
                +flex-direction(row)
                +justify-content(space-around)
 
-               .img
-                  background: none
-                  margin-bottom: 70px
-                  //margin-bottom:
-                  +size(500px)
-                  margin-left: 50px
-
-
                .info
 
                   margin: 10px
                   padding: 0 10px
-                  +span-columns(8)
+                  +span-columns(10)
                   +display(flex)
                   +flex-direction(column)
                   +justify-content(space-between)
@@ -68,7 +60,7 @@
                   a
                      @extend .thick-heading
                      line-height: $heading-line-height*1.7
-                     color: fade-out($light-text, 0.12)
+                     color: fade-out($dark-text, 0.12)
                      padding: 0px
                      word-wrap: break-word
                      text-align: center
@@ -79,7 +71,7 @@
                         padding: 4px 8px 6px 15px
 
                         border:
-                           color: fade-out($light-text, 0.15)
+                           color: fade-out($dark-text, 0.15)
                            width: 5px
                            style: solid
 
@@ -103,11 +95,32 @@
 
                      // padding: 0px
 
+
+            &#bild
+               .img
+                  +span-columns(12)
+                  background-color: red
+
+
+                  background:
+                     image: url("/assets/img/etg_group_bild.png")
+                     size: cover
+                     position: 40%-40%
+                     repeat: no-repeat
+
+                     //background: rgba($dark-gray,0.4)
+                     //margin-bottom: 70px
+                     //+fill-parent
+                     //position: absolute
+                     //height: 100%
+                     //z-index: 0
+
+
             &#forskargruppen
                .img
                   display: none
                .infoforsk
-                  color: $light-text
+                  color: $dark-text
                   text-align: left
                   +span-columns (12)
                   +flex-direction(row)
@@ -134,7 +147,7 @@
                      margin: 0 0 12px
 
                   a
-                     color: fade-out($light-text, 0.14)
+                     color: fade-out($dark-text, 0.14)
                      padding: 0px
 
                      word-wrap: break-word
@@ -146,92 +159,38 @@
                         +transition(background .5s)
                         padding: 4px 8px 6px 15px
                         border:
-                           color: fade-out($light-text, 0.15)
+                           color: fade-out($dark-text, 0.15)
                            width: 5px
                            style: solid
-                           border-color: $light-text
+                           border-color: $dark-text
                            border-color: fade-out($dark-text, 0.25)
                      &:hover
-                        color: $dark-teal
+                        color: $orange
                         div
-                           border-color: fade-out($light-text, 0)
+                           border-color: fade-out($dark-text, 0)
                            background: fade-out($light-text, 0)
 
 
-
-
-
-
-
-                     //background: $soft-gray
-                     //margin: auto 10px
-                     //+size(600px)
-
-
-            &#kontakta-oss
-               .info
-                  color: $dark-text
-                  text-align: left
-                  +span-columns(12)
-                  .content
-                     width: 40%
-                     display: inline-block
-               a
-                  //color: fade-out($dark-text, 0.14)
-                  div
-                     //border-color: $dark-text
-                     //border-color: fade-out($dark-text, 0.25)
-
-                     +transition(background .5s)
-                  &:hover
-                     color: $dark-teal
-                     div
-                        border-color: fade-out($light-text, 0)
-                        background: fade-out($light-text, 0)
-               .img
-                  display: inline-block
-
-                  background:
-                     opacity: 0
-                     image: url("http://www.lucs.lu.se/wp-content/uploads/2014/10/etg_group_2x6_141029.png")
-                     size: contain
-                     repeat: no-repeat
-                     position: 50% 50%
-
-
             &#avslut
+               .img
+                  display: none
                .info
-                  color: $dark-text
+                  color: $light-gray
                   text-align: left
                   h3
-                     color: $dark-text
+                     color: $light-text
+                     text-align: center
 
                   .manifest
                      ul
                         list-style: none
                         text-align: center
+                        margin-top: 20px
                         li
                            font:
-                              size: 20px
-                              weight: 100
+                              size: 30px
+                              weight: 200
                            strong
                               font-weight: bold
                               size: 30px
-                              color: black
-                  a
-                     color: fade-out($dark-text, 0.14)
-                     div
-                        border-color: $dark-text
-                        border-color: fade-out($dark-text, 0.25)
-                     &:hover
-                        color: darken($water-blue, 30)
-                        div
-                           border-color: darken($water-blue, 30)
-                           // background: fade-out(lightblue,0.9)
-
-               .img
-                  background:
-                     image: url("/assets/img/etg.png")
-                     size: contain
-                     repeat: no-repeat
-                     position: 50% 50%
+                              color: dark-gray
