--- a/assets/css/4-page-layouts/_articles.sass
+++ b/assets/css/4-page-layouts/_articles.sass
@@ -10,10 +10,11 @@
          background: $soft-gray
 
    #articles-intro-section
-      background: $medium-teal
+      @extend .intro-section
+      background: $section-bg-4
       .wrapper
          section
-            color: $dark-text
+            color: $light-text
             padding: 15px 40px 0px
             h1
                @extend .thin-heading
