--- a/assets/css/4-page-layouts/_contact.sass
+++ b/assets/css/4-page-layouts/_contact.sass
@@ -1,5 +1,7 @@
 
 .contact
+   @extend .intro-section
+   background: darken($section-bg-4, 0)
    .section-parent
       position: relative
       // top: 10px
@@ -8,26 +10,26 @@
 
 
    #contact-intro-section
-      background: $dark-teal
+      @extend .intro-section
+      background: darken($section-bg-3, 0)
       .wrapper
          section
             color: $light-text
             padding: 20px 40px 0px
             p
-               font:
-                  size: 20px
-                  weight: 100
-            h1
+               @extend .p-section
+            //h1
                @extend .thin-heading
                margin-left: -4px
                margin-bottom: 4px
 
             ul
-               list-style: none
+               list-style: circle
                text-align: left
+               list-style-position: inside
                li
                   font:
-                     size: 25px
+                     size: 23px
                      weight: 100
                   strong
                      font-weight: bold
@@ -57,6 +59,7 @@
             font-size: 25px
             margin: 0 0 0px
             margin-bottom: 10px
+            margin-left: 10px
          hr
             margin: 10px 0
             &:nth-child(2)
@@ -71,18 +74,20 @@
             border-bottom: 4px solid $orange
             display: inline-block
             margin-right: 3px
+            margin-left: 10px
 
          a
             font-size: 30px
             color: black
-            float: right
+            float: left
 
          input
+
             +media($tablet)
                width: calc(90% - 54px)
             width: calc(100% - 54px)
             margin-top: 6px
-            height: 36px
+            height: 46px
             display: inline-block
             color: fade-out($dark-text, 0.2)
             border-width: 1px
@@ -93,6 +98,21 @@
             border-color: fade-out($dark-text, 0.3)
             box-shadow: none
             outline: none
+
+         #namn
+            width: 50%
+            display: flex
+            flex-direction: column
+
+         #adress
+            width: 50%
+            display: flex
+            flex-direction: column
+
+         #epost
+            width: 50%
+            display: flex
+            flex-direction: column
 
          p
             font:
