Added filtering of recs, new footer

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,7 @@
             {% endfor %} -->
             <li><a id="navLink1" {% if page.url == '/' %}class="nav-item-active"{% endif %} href="/"> Start </a></li>
             <li><a id="navLink2" {% if page.url == '/themes/' %}class="nav-item-active"{% endif %} href="/themes/">Teman</a></li>
-            <li><a id="navLink3" {% if page.url == '/recommendations/' %}class="nav-item-active"{% endif %} href="/recommendations/"> Rekomendationer </a></li>
+            <li><a id="navLink3" {% if page.url == '/recommendations/' %}class="nav-item-active"{% endif %} href="/recommendations/"> Rekommendationer </a></li>
             <!-- <li><a  >Demo</a></li> -->
             <li><a id="navLink4" {% if page.url == '/articles/' %}class="nav-item-active"{% endif %} href="/articles/"> Artiklar </a></li>
             <li><a id="navLink5" {% if page.url == '/posts/' %}class="nav-item-active"{% endif %} href="/posts/"> Nyheter </a></li>
