--- a/_layouts/recommendation.html
+++ b/_layouts/recommendation.html
@@ -14,8 +14,8 @@
             <h1>
                {{ page.title }}
             </h1>
-            <a {% if page.subject == 'Matematik' %} class="math-link category-link" {% elsif page.subject == 'Svenska' %} class="swe-link category-link" {% elsif page.subject == 'Engelska' %} class="eng-link category-link" {% endif %}  href="/{{page.subject}}"> {{page.subject}}</a>
-            <a {% if page.years == 'Lågstadiet' %} class="junior-link category-link" {% elsif page.years == 'Mellanstadiet' %} class="middle-link category-link"  {% elsif page.years == 'Högstadiet' %} class="senior-link category-link" {% endif %}  href="/{{page.years}}"> {{page.years}}</a>
+            <!-- <a {% if page.subject == 'Matematik' %} class="math-link category-link" {% elsif page.subject == 'Svenska' %} class="swe-link category-link" {% elsif page.subject == 'Engelska' %} class="eng-link category-link" {% endif %}  href="/{{page.subject}}"> {{page.subject}}</a> -->
+            <!-- <a {% if page.years == 'Lågstadiet' %} class="junior-link category-link" {% elsif page.years == 'Mellanstadiet' %} class="middle-link category-link"  {% elsif page.years == 'Högstadiet' %} class="senior-link category-link" {% endif %}  href="/{{page.years}}"> {{page.years}}</a> -->
             <hr>
             <p>
                <h4>
