--- a/assets/css/2-base/_typography.scss
+++ b/assets/css/2-base/_typography.scss
@@ -93,6 +93,9 @@ a.category-link{
    display: inline-block;
    margin-right: 3px;
    // text-transform: uppercase;
+   &:hover{
+      cursor: pointer;
+   }
    &.math-link{
       border-color: $green;
    }
