work on new footer

--- a/_includes/footer2.html
+++ b/_includes/footer2.html
@@ -20,10 +20,19 @@
       </div>
       <!-- <hr> -->
       <p class="footer-copy">
-         Copyright &copy
-         <span id="copy-year"></span>
-         DigiTech.se  |  <a href="http://www.lucs.lu.se/educational-technology/">Educational Technology Group</a>
-          |  kontakt@edutech.se
+         <span class="footer-span">
+            Copyright &copy
+            <span id="copy-year"></span>
+            EduTech.se
+         </span>
+         |
+         <span class="footer-span">
+            <a href="http://www.lucs.lu.se/educational-technology/">Educational Technology Group</a>
+         </span>
+         |
+         <span class="footer-span">
+            kontakt@edutech.se
+         </span>
       </p>
       <hr>
    </div>
