--- a/assets/css/4-page-layouts/_articles.sass
+++ b/assets/css/4-page-layouts/_articles.sass
@@ -36,7 +36,7 @@
 
       .article
          +span-columns(12)
-         min-height: (100px)
+         min-height: 100px
          background: $media-box-bg
          margin: 10px 2px
          padding: 10px
