--- a/assets/css/4-page-layouts/_index.sass
+++ b/assets/css/4-page-layouts/_index.sass
@@ -217,6 +217,7 @@
                               margin-bottom: 36px
                            p
                               @extend .p-section
+                              display: inline
                               color: $dark-text
                               font-size: 0.9em
                               margin: 0
