--- a/assets/css/4-page-layouts/_header.sass
+++ b/assets/css/4-page-layouts/_header.sass
@@ -117,9 +117,11 @@ header
                   font:
                      size: 1.0em
                      weight: $bold
+                  letter-spacing: 1.0px
 
                   +media($tablet)
                      font-size: 0.8em
+                     letter-spacing: 0.87px
                      height: $tablet-header-height
 
                   &:hover
