--- a/assets/css/4-page-layouts/_contact.sass
+++ b/assets/css/4-page-layouts/_contact.sass
@@ -93,6 +93,7 @@
             border-width: 1px
             border-style: solid
             border-color: fade-out($dark-text, 0.5)
+            margin-left: 10px
 
          input:focus
             border-color: fade-out($dark-text, 0.3)
@@ -120,6 +121,7 @@
                weight: 200
             margin: 15px 0
             color: black
+            margin-left: 10px
 
 
          a
@@ -135,6 +137,7 @@
                weight: 700
             margin-right: 40px
             margin-bottom: 30px
+            margin-left: 10px
 
             div
                +transition(background .5s)
