nya footern och ändrat kontakt

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,7 +22,7 @@
             <!-- <li><a  >Demo</a></li> -->
             <li><a id="navLink4" {% if page.url == '/articles/' %}class="nav-item-active"{% endif %} href="/articles/"> Artiklar </a></li>
             <li><a id="navLink5" {% if page.url == '/posts/' %}class="nav-item-active"{% endif %} href="/posts/"> Nyheter </a></li>
-            <li><a id="navLink6" {% if page.url == '/contact/' %}class="nav-item-active"{% endif %} href="/contact/"> Kontakt </a></li>
+            <li><a id="navLink6" {% if page.url == '/contact/' %}class="nav-item-active"{% endif %} href="/about/#contact-anchor"> Kontakt </a></li>
             <li><a id="navLink7" {% if page.url == '/about/' %}class="nav-item-active"{% endif %} href="/about/"> Om Oss </a></li>
          </ul>
       </nav>
