--- a/assets/css/4-page-layouts/_about.sass
+++ b/assets/css/4-page-layouts/_about.sass
@@ -100,7 +100,7 @@
             &#bild
                .img
                   +span-columns(12)
-                  background-color: red
+                  background-color: none
                   min-height: 450px
 
 
